--- a/diceGame.html
+++ b/diceGame.html
@@ -12,17 +12,18 @@
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	</head>
 	<body>
-    <h1 id="Dice 100" class="diceGame"> Dice 100 </h1>
+		 <h1 id="Dice 100" class="col-md-12"> Dice 100 </h1>
     <div id="dice1" class="dice">0</div>
     <div id="dice2" class="dice">0</div>
     <div class="playerScore">
-        <h2>PLAYER 1:</h2>
+        <h2>DRAGON:</h2>
         <h2 id="player1Score"></h2>
-        <h2>PLAYER 2:</h2>
+        <h2>NIGHTHAWK:</h2>
         <h2 id="player2Score"></h2>
     <button onclick="rollDice()" id="rollDice">Roll Dice</button>
     <h2 id="status" style="clear:left;"></h2>
     <script type="text/javascript" src="diceGame.js"></script>
+    
 </body>
 	
 <style>
